--- a/app/package.json
+++ b/app/package.json
@@ -8,12 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.4.0",
+    "@types/language-tags": "^1.0.0",
+    "@types/react-redux": "^7.1.11",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "language-tags": "^1.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-paper": "^4.3.0",
+    "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
